<resources>
    <string name="app_name">myFristAndroidProject</string>
    <string name="title_chart">Chart</string>
    <string name="title_member">Member</string>
    <string name="title_community">Community</string>
    <string name="title_setting">Setting</string>
    <string name="title_voice">Voice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
