<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/menu_btn_chart"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_member"
        android:icon="@drawable/menu_btn_member"
        android:title="@string/title_member" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/menu_btn_community"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/menu_btn_setting"
        android:title="@string/title_setting"/>

    <item
        android:id="@+id/navigation_voice"
        android:icon="@drawable/menu_btn_voice"
        android:title="@string/title_voice"/>

</menu>
